# crypto

./: Cargo.toml  Makefile.toml  README.md  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: doc.yml
canaries/canary-alloc/: Cargo.toml
canaries/canary-alloc/src/: main.rs
canaries/canary-std/: Cargo.toml
canaries/canary-std/src/: main.rs
crates/acvp/: Cargo.toml  build.rs
crates/acvp/src/: lib.rs  traits.rs  util.rs
crates/acvp/src/testing/: hash.rs  mod.rs  sha2.rs  sha3.rs
crates/acvp/src/vectors/: hmac.rs  mod.rs  sha2.rs  sha3.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto-derive/: Cargo.toml  build.rs
crates/crypto-derive/src/: alg_id.rs  lib.rs  oid.rs
crates/crypto/src/: aead.rs  bearssl.rs  block.rs  csprng.rs  default.rs  ec.rs  ed25519.rs  hash.rs  hex.rs  hkdf.rs  hmac.rs  hpke.rs  import.rs  kdf.rs  kem.rs  keys.rs  lib.rs  mac.rs  oid.rs  rust.rs  signer.rs  zeroize.rs
crates/crypto/src/oid/: consts.rs  mod.rs
crates/crypto/src/sha3/: mod.rs
crates/crypto/src/test_util/: acvp.rs  aead.rs  ecdh.rs  hash.rs  hpke.rs  kdf.rs  mac.rs  mod.rs  signer.rs  vectors.rs  wycheproof.rs
crates/libcrypto/: Cargo.toml  build.rs  cbindgen.toml
crates/libcrypto-codegen/: .clang-format  Cargo.toml  README.md
crates/libcrypto-codegen/src/: aead.h  aead.inc  aead.rs  api.rs  base.h  cipher.inc  cipher.rs  error.rs  lib.rs  util.rs
crates/libcrypto-codegen/src/headers/: base.h
crates/libcrypto-macro/: Cargo.toml
crates/libcrypto-macro/src/: aeads.rs  api.rs  build.rs  lib.rs  util.rs
crates/libcrypto-rust/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/libcrypto-rust/.cargo/: config.toml
crates/libcrypto-rust/output/: spideroak-crypto.h
crates/libcrypto-rust/src/: lib.rs
crates/libcrypto/output/: __all.h
crates/libcrypto/src/: aead.rs  cipher.rs  const_fmt.rs  error.rs  lib.rs  testing.rs  util.rs  weak.rs
crates/libcrypto/src/util/: mod.rs  opaque.rs
crates/s2n-tls/: Cargo.toml
crates/s2n-tls/src/: crypto.rs  lib.rs  provider.rs
supply-chain/: audits.toml  config.toml
