[workspace]
resolver = "2"

members = [
	"canaries/*",
	"crates/*",
]

default-members = [
	"crates/*",
]

[workspace.package]
authors = ["SpiderOak, Inc."]
edition = "2021"
repository = "https://github.com/aranya-project/crypto"
rust-version = "1.81.0"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
panic = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
cfg-if = { version = "1", default-features = false }
serde = { version = ">= 1.0.184", default-features = false }
thiserror = { version = "2", default-features = false }

# [workspace.build-dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0.80" }
quote = { version = "1.0" }
syn = { version = "2.0.59" }

[profile.dev]
# Required for some of the tests to run in a reasonable amount of
# time.
opt-level = 2

[profile.dev-std]
inherits = "dev"
panic = "unwind"

[profile.release]
lto = "thin"
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.release-std]
inherits = "release"
panic = "unwind"

[profile.bench]
inherits = "release"
