[workspace]
resolver = "2"

members = [
	"canaries/*",
	"crates/*",
]

default-members = [
	"crates/*",
]

[workspace.package]
authors = ["SpiderOak, Inc."]
edition = "2021"
repository = "https://github.com/aranya-project/crypto"
rust-version = "1.85.0"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
panic = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[workspace.dependencies]

[profile.dev]
panic = "abort"
opt-level = 1

[profile.dev-std]
inherits = "dev"
panic = "unwind"

[profile.release]
lto = "thin"
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.release-std]
inherits = "release"
panic = "unwind"

[profile.bench]
inherits = "release"
