[package]
name = "canary-std"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# `spideroak-crypto` enables `getrandom` by default.
spideroak-crypto = { path = "../../crates/crypto", default-features = false, features = [
	"alloc",
	"committing-aead",
	"clone-aead",
	"rand_compat",
] }
