[package]
name = "spideroak-crypto-derive"
description = "Proc macros for `spideroak-crypto`"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[features]
default = []

[dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true }

[package.metadata.docs.rs]
all-features = true
