[package]
name = "spideroak-crypto-derive"
description = "Proc macros for `spideroak-crypto`"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[features]
default = []

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }

[package.metadata.docs.rs]
all-features = true
