[package]
name = "spideroak-crypto"
description = "SpiderOak's cryptography library"
version = "0.3.0-pre.2"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
categories = ["cryptography", "no-std", "no-std::no-alloc"]
keywords = ["crypto", "cryptography", "spideroak"]

[lints]
workspace = true

[lib]

[features]
default = [
	"getrandom",
	"test_util",
]

# Enable allocations.
alloc = [
	"aes-gcm/alloc",
	"buggy/alloc",
	"der/alloc",
	"ecdsa/alloc",
	"rand?/alloc",
	"rand_core/alloc",
	"sha3-utils/alloc",
	"zeroize/alloc",
]

# Enable BearSSL.
bearssl = [
	"dep:aranya-bearssl-sys",
]

# Enable committing AEAD implementations.
committing-aead = [
	"dep:aes",
]

# Implement `Clone` for the built-in AEADs.
clone-aead = []

# Enable Ed25519 batch signature verification.
#
# NB: this is NOT supported on big-endian architectures.
#
# This is its own feature because of a weird interaction
# between cargo, ed25519-dalek, and VxWorks.
#
# ed25519-dalek's `batch` feature requires `alloc`, so normally
# we'd put "ed25519-dalek/batch" behind our `alloc` feature.
#
# However, ed25519-dalek's `batch` feature does not build for
# vxworks/ppc because its merlin dependency does not support
# big-endian architectures.
#
# Cargo does not support target-specific features, so we're
# unable to express "enable ed25519-dalek/batch only if `alloc`
# is enabled and the current architecture is little-endian."
ed25519_batch = [
	"alloc",

	"ed25519-dalek/batch",
]

# Enable `getrandom` support.
#
# NB: `getrandom` does not support VxWorks < 7.
getrandom = [
	"dep:getrandom",

	"rand_core/getrandom",
]

# Enable cryptographically hazardous code.
hazmat = []

# Enable compat with the `rand`, `rand_core`, etc. crates.
rand_compat = [
	"dep:rand",
]

# Use std.
std = [
	"alloc",
	# If we're already using `std`, we might as well enable
	# `Csprng` support for `OsRng`. Doing this makes the
	# `#[cfg(...)]` blocks easier to manage.
	"getrandom",

	# Pull in `rand` for `ThreadRng`.
	"dep:rand",

	"aes-gcm/std",
	"buggy/std",
	"crypto-common/std",
	"der/std",
	"der/std",
	"ecdsa/std",
	"ed25519-dalek/std",
	"elliptic-curve/std",
	"getrandom?/std",
	"p256/std",
	"p384/std",
	"rand?/std",
	"rand?/std_rng",
	"rand_chacha?/std",
	"rand_core/std",
	"serde?/std",
	"serde_json?/std",
	"sha2/std",
	"sha3-utils/std",
	"spin?/std",
	"subtle/std",
	"thiserror/std",
	"zeroize/std",
]

# Include testing utilities.
test_util = [
	"alloc",

	"dep:more-asserts",
	"dep:serde",
	"dep:serde_json",
	"dep:serde_repr",
	"dep:wycheproof",
]

# Use a system provided TRNG for the default CSPRNG.
trng = [
	"dep:aes",
	"dep:rand_chacha",
	"dep:spin",
]

[dependencies]
##
# This workspace
##

# Only pulled into non-dev builds if `test_util` is enabled. It
# won't bloat release builds, though, since users of this crate
# should only use this feature inside [dev-dependencies].
spideroak-crypto-derive = { version = "0.1.0", path = "../crypto-derive" }

##
# Other SpiderOak crates
##

aranya-bearssl-sys = { version = "0.1.0", optional = true }
buggy = { version = "0.1.0", default-features = false }

##
# Third party
##

aes = { version = "0.8", default-features = false, features = ["zeroize"], optional = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
cfg-if = { version = "1", default-features = false }
crypto-common = { version = "0.1", default-features = false }
der = { version = "0.7", default-features = false }
ecdsa = { version = "0.16", default-features = false, features = ["signing", "verifying", "der"] }
ed25519-dalek = { version = "2", default-features = false, features = ["fast", "zeroize"] }
elliptic-curve = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic", "sec1"] }
# `generic-array@1.2` has an MSRV of 1.83, ours is 1.81.
generic-array = { version = "1.1.*", default-features = false, features = ["const-default", "zeroize"] }
getrandom = { version = "0.2", default-features = false, optional = true }
more-asserts = { version = "0.3", default-features = false, optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa"] }
rand = { version = "0.8", default-features = false, optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }
# `rand_core` is required by the `rust` backend.
rand_core = { version = "0.6", default-features = false }
# The "serde*" crates are only used by `test_util`.
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, optional = true }
serde_repr = { version = "0.1", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false }
sha3-utils = { version = "0.3.0", default-features = false }
spin = { version = "0.9", default-features = false, features = ["spin_mutex"], optional = true }
subtle = { version = "2.5", default-features = false, features = ["core_hint_black_box"] }
thiserror = { version = "2", default-features = false }
typenum = { version = "1", default-features = false, features = ["const-generics"] }
# Only pulled into non-dev builds if `test_util` is enabled. It
# won't bloat release builds, though, since users of this crati
# should only use this feature inside [dev-dependencies].
wycheproof = { version = "0.6", optional = true }
zeroize = { version = "1", default-features = false }

[dev-dependencies]
# A little bit of a hack: always certain features for tests and
# examples.
spideroak-crypto = { path = ".", features = ["alloc", "test_util"] }

[package.metadata.docs.rs]
features = [
	"clone-aead",
	"committing-aead",
	"ed25519_batch",
	"rand_compat",
	"std",
	"test_util",
	"trng",
]

[package.metadata.cargo-all-features]
always_include_features = [
	"alloc",
	"bearssl",
	"clone-aead",
	"committing-aead",
	"ed25519_batch",
	"getrandom",
	"hazmat",
	"rand_compat",
	"std",
	"test_util",
]

skip_feature_sets = []

denylist = []

[package.metadata.cargo-machete]
ignored = ["old-generic-array"]
