[package]
name = "spideroak-libcrypto-codegen"
description = "Code generator for `spideroak-libcrypto`"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
categories = ["cryptography"]
keywords = ["libcrypto", "codegen"]

[lints]
workspace = true

[lib]

[features]
default = []

[dependencies]
anyhow = { workspace = true, features = ["std"] }
cbindgen = { version = "0.28" }
codespan-reporting = { version = "0.11.1" }
log = { version = "0.4" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
