[package]
name = "spideroak-libcrypto-macro"
description = "Proc macros for `spideroak-libcrypto`"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
categories = ["cryptography"]
keywords = ["libcrypto", "codegen"]

[lints]
workspace = true

[lib]
proc-macro = true

[features]
default = []

[dependencies]
spideroak-libcrypto-codegen = { version = "0.1", path = "../libcrypto-codegen" }

aho-corasick = { version = "1.1.3" }
anyhow = { workspace = true, features = ["std"] }
bimap = { version = "0.6.3" }
codespan-reporting = { version = "0.11.1" }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
syn = { workspace = true, features = ["extra-traits", "full"] }
tracing = { workspace = true, features = ["std"] }
