[package]
name = "spideroak-libcrypto-macro"
description = "Proc macros for `spideroak-libcrypto`"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "BSD-3-Clause"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
categories = ["cryptography"]
keywords = ["libcrypto", "codegen"]

[lints]
workspace = true

[lib]
proc-macro = true

[features]
default = []

[dependencies]
spideroak-libcrypto-codegen = { version = "0.1", path = "../libcrypto-codegen" }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
